--- a/index.html
+++ b/index.html
@@ -47,85 +47,30 @@
     .hero h1{font-size:clamp(2.8rem,8vw,5rem);margin-bottom:20px;line-height:1.1;text-shadow:0 0 40px rgba(255,215,0,0.8);}
     .hero p{font-size:1.4rem;max-width:700px;margin:0 auto 30px;opacity:0.95;}
     .motto{font-size:clamp(2.2rem,7vw,4rem);font-weight:900;background:linear-gradient(45deg,#ffd700,#ff6b35,#4ecdc4);-webkit-background-clip:text;-webkit-text-fill-color:transparent;margin:35px 0;}
-    .btn{display:inline-block;padding:20px 50px;margin:15px;background:linear-gradient(45deg,#ffd700,#ff6b35);color:#0f0f23;font-weight:bold;border-radius:50px;font-size:1.4rem;box-shadow:0 12px 35px rgba(255,107,53,0.5);transition:all 0.4s;}
-    .btn:hover{transform:translateY(-10px) scale(1.08);box-shadow:0 25px 60px rgba(255,107,53,0.7);}
+    .btn{display:inline-block;padding:20px 50px;margin:15px;background:linear-gradient(45deg,#ffd700,#ff6b35);color:#0f0f23;font-weight:bold;border-radius:50px;font-size:1.4rem;box-shadow:0 12px 35px rgba(255,107,53,0.5);transition:0.4s;}
+    .btn:hover{transform:translateY(-10px) scale(1.08);}
     .btn-secondary{background:linear-gradient(45deg,#4ecdc4,#00a86b);color:#fff;}
 
-    /* PREMIUM CARD ANIMATION */
-    section{
-      max-width:1100px;margin:120px auto;padding:70px 40px;
-      background:rgba(255,255,255,0.07);
-      backdrop-filter:blur(20px);
-      border-radius:32px;
-      border:1px solid rgba(255,215,0,0.25);
-      box-shadow:0 20px 60px rgba(0,0,0,0.3);
-      opacity:0;
-      transform:translateY(60px) scale(0.95);
-      transition:all 1.2s cubic-bezier(0.22,1,0.36,1);
-    }
-    section.visible{
-      opacity:1;
-      transform:translateY(0) scale(1);
-    }
+    section{max-width:1100px;margin:100px auto;padding:60px 30px;background:rgba(255,255,255,0.08);backdrop-filter:blur(20px);border-radius:30px;border:1px solid rgba(255,215,0,0.25);}
+    h2{font-size:2.8rem;text-align:center;color:#ffd700;margin-bottom:40px;}
+    .counter{font-size:clamp(4rem,12vw,7rem);font-weight:900;background:linear-gradient(45deg,#4ecdc4,#ffd700);-webkit-background-clip:text;-webkit-text-fill-color:transparent;text-align:center;}
 
-    h2{font-size:2.9rem;text-align:center;color:#ffd700;margin-bottom:50px;}
-    .counter{font-size:clamp(4.5rem,13vw,8rem);font-weight:900;background:linear-gradient(45deg,#4ecdc4,#ffd700);-webkit-background-clip:text;-webkit-text-fill-color:transparent;text-align:center;}
-
-    /* ANIMATED CHECKMARKS — draw + pulse */
-    ul{list-style:none;max-width:850px;margin:60px auto;}
+    /* REAL ICON CHECKMARKS */
+    ul{list-style:none;max-width:800px;margin:50px auto;}
     ul li{
-      font-size:1.38rem;margin:38px 0;padding-left:90px;
-      position:relative;line-height:1.8;
-      opacity:0;
-      transform:translateX(-40px);
+      font-size:1.35rem;margin:30px 0;padding-left:70px;
+      position:relative;line-height:1.7;
     }
-    ul li.visible{
-      opacity:1;
-      transform:translateX(0);
-      transition:all 0.9s ease-out;
-    }
-    .checkmark{
+    ul li::before{
+      content:"";
       position:absolute;left:0;top:50%;
       transform:translateY(-50%);
-      width:56px;height:56px;
-    }
-    .checkmark svg{
-      width:100%;height:100%;
-    }
-    .checkmark path{
-      fill:none;stroke:#00a86b;stroke-width:7;
-      stroke-linecap:round;stroke-linejoin:round;
-      stroke-dasharray:100;stroke-dashoffset:100;
-    }
-    .checkmark.visible path{
-      animation:draw 1s forwards 0.3s, pulse 2s infinite 1.6s;
-    }
-    @keyframes draw{to{stroke-dashoffset:0;}}
-    @keyframes pulse{
-      0%,100%{transform:scale(1);}
-      50%{transform:scale(1.15);}
+      width:44px;height:44px;
+      background:url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="%2300a86b"><path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/></svg>') center/contain no-repeat;
     }
 
-    .final-cta{
-      background:linear-gradient(135deg,#ff6b35,#ffd700);
-      color:#0f0f23;padding:100px 40px;border-radius:44px;
-      text-align:center;margin:120px auto;box-shadow:0 30px 80px rgba(255,107,53,0.5);
-      opacity:0;transform:scale(0.9);
-      transition:all 1.4s cubic-bezier(0.22,1,0.36,1);
-    }
-    .final-cta.visible{opacity:1;transform:scale(1);}
-
-    .whatsapp-float{
-      position:fixed;bottom:30px;right:30px;width:68px;height:68px;
-      background:#25d366;color:#fff;border-radius:50%;
-      display:flex;align-items:center;justify-content:center;
-      font-size:36px;box-shadow:0 10px 30px rgba(37,211,102,0.7);z-index:999;
-      animation:float 6s ease-in-out infinite;
-    }
-    @keyframes float{
-      0%,100%{transform:translateY(0);}
-      50%{transform:translateY(-20px);}
-    }
+    .final-cta{background:linear-gradient(135deg,#ff6b35,#ffd700);color:#0f0f23;padding:90px 30px;border-radius:40px;text-align:center;margin:100px auto;}
+    .whatsapp-float{position:fixed;bottom:30px;right:30px;width:65px;height:65px;background:#25d366;color:#fff;border-radius:50%;display:flex;align-items:center;justify-content:center;font-size:35px;box-shadow:0 8px 25px rgba(37,211,102,0.7);z-index:999;}
   </style>
 </head>
 <body>
@@ -141,7 +86,7 @@
   <canvas id="particles-js"></canvas>
   
   <div class="hero-content">
-    <h1 data-aos="fade-up" data-aos-duration="1200">African Teachers Are Rising<br>to Lead the AI Revolution</h1>
+    <h1 data-aos="fade-up">African Teachers Are Rising<br>to Lead the AI Revolution</h1>
     <p data-aos="fade-up" data-aos-delay="200">The continent’s first teacher-led, mobile-first AI training movement — built by African teachers, for African teachers.</p>
     <div class="motto" data-aos="zoom-in" data-aos-delay="400">Teach Smart, Lead Change</div>
     <div data-aos="fade-up" data-aos-delay="600">
@@ -151,7 +96,8 @@
   </div>
 </div>
 
-<section data-aos="fade-up" class="visible">
+<!-- Your sections (only changed the checkmarks) -->
+<section data-aos="fade-up">
   <h2>Founding Teachers So Far</h2>
   <div class="counter" id="counter">0</div>
   <p style="text-align:center;font-size:1.4rem;color:#ffd700;margin-top:20px;">…and growing every minute. Be part of history!</p>
@@ -180,11 +126,11 @@
   <h2>The Solution — Led by You</h2>
   <p style="text-align:center;font-size:1.4rem;max-width:700px;margin:0 auto 40px;">Together we are building the first truly African AI curriculum and tools:</p>
   <ul>
-    <li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l4.5 4.5 10.5-10.5"/></svg></div>100% teacher-led from day one</li>
-    <li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l4.5 4.5 10.5-10.5"/></svg></div>Mobile-first — works on any phone, any network</li>
-    <li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l4.5 4.5 10.5-10.5"/></svg></div>Free core training forever</li>
-    <li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l4.5 4.5 10.5-10.5"/></svg></div>Fully aligned with UNESCO AI Competency Framework for Teachers</li>
-    <li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l4.5 4.5 10.5-10.5"/></svg></div>Fully aligned with African Union Continental AI Strategy</li>
+    <li>100% teacher-led from day one</li>
+    <li>Mobile-first — works on any phone, any network</li>
+    <li>Free core training forever</li>
+    <li>Fully aligned with UNESCO AI Competency Framework for Teachers</li>
+    <li>Fully aligned with African Union Continental AI Strategy</li>
   </ul>
   <div class="motto" style="margin-top:50px;">Teach Smart, Lead Change</div>
 </section>
@@ -192,19 +138,19 @@
 <section data-aos="fade-up">
   <h2>What Founding Teachers Gain</h2>
   <ul>
-    <li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l4.5 4.5 10.5-10.5"/></svg></div>Shape the curriculum used by millions of African learners</li>
-    <li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l4.5 4.5 10.5-10.5"/></svg></div>Exclusive digital badge & certificate</li>
-    <li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l4.5 4.5 10.5-10.5"/></svg></div>Direct collaboration with teachers across 54 countries</li>
-    <li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l4.5 4.5 10.5-10.5"/></svg></div>Early access to brand-new AI teaching tools</li>
-    <li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l4.5 4.5 10.5-10.5"/></svg></div>Recognition from UNESCO, African Union & global partners</li>
-    <li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l4.5 4.5 10.5-10.5"/></svg></div>Leave a legacy in the history of African education</li>
+    <li>Shape the curriculum used by millions of African learners</li>
+    <li>Exclusive digital badge & certificate</li>
+    <li>Direct collaboration with teachers across 54 countries</li>
+    <li>Early access to brand-new AI teaching tools</li>
+    <li>Recognition from UNESCO, African Union & global partners</li>
+    <li>Leave a legacy in the history of African education</li>
   </ul>
 </section>
 
-<section class="final-cta">
-  <h2 style="font-size:3.6rem;color:#fff;">The First 10,000 Teachers Own This Movement</h2>
-  <p style="font-size:1.75rem;max-width:700px;margin:30px auto;">After that, the Founding Alliance closes forever.</p>
-  <a href="YOUR_ALLIANCE_FORM_LINK" class="btn" style="background:#fff;color:#0f0f23;font-size:1.8rem;padding:28px 80px;">Yes, I’m In — Claim My Spot Now</a>
+<section class="final-cta" data-aos="zoom-in">
+  <h2 style="font-size:3.5rem;color:#fff;">The First 10,000 Teachers Own This Movement</h2>
+  <p style="font-size:1.7rem;max-width:700px;margin:30px auto;">After that, the Founding Alliance closes forever.</p>
+  <a href="YOUR_ALLIANCE_FORM_LINK" class="btn" style="background:#fff;color:#0f0f23;font-size:1.7rem;padding:25px 70px;">Yes, I’m In — Claim My Spot Now</a>
 </section>
 
 <a href="https://wa.me/YOUR_NUMBER?text=Hi%20TichaAfrica!" class="whatsapp-float" target="_blank">WhatsApp</a>
@@ -212,32 +158,22 @@
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
 <script>
-  AOS.init({once:true,duration:1200,easing:'cubic-bezier(0.22,1,0.36,1)'});
+  AOS.init({once:true,duration:1200});
 
-  // Make every section & list item animate beautifully
-  const observer = new IntersectionObserver((entries) => {
-    entries.forEach(entry => {
-      if (entry.isIntersecting) {
-        entry.target.classList.add('visible');
-        if (entry.target.querySelectorAll) {
-          entry.target.querySelectorAll('li').forEach((li, i) => {
-            setTimeout(() => li.classList.add('visible'), i * 150);
-          });
-        }
-      }
-    });
-  }, { threshold: 0.2 });
-
-  document.querySelectorAll('section, .final-cta').forEach(el => observer.observe(el));
-
-  // Particles + counter unchanged (already perfect)
+  // Deep-green particles
   particlesJS("particles-js", {
-    particles: { number: { value: 220 }, color: { value: ["#006400","#008c4a","#00a86b","#00c67a"] },
-      opacity: { value: 0.9, random: true }, size: { value: 5, random: true }, move: { enable: true, speed: 0.9 }
+    particles: {
+      number: { value: 220 },
+      color: { value: ["#006400","#008c4a","#00a86b","#00c67a"] },
+      opacity: { value: 0.9, random: true },
+      size: { value: 5, random: true },
+      move: { enable: true, speed: 0.9 }
     },
-    interactivity: { events: { onhover: { enable: true, mode: "repulse" }}}, retina_detect: true
+    interactivity: { events: { onhover: { enable: true, mode: "repulse" }}},
+    retina_detect: true
   });
 
+  // Counter
   let count = 0, target = 1247;
   const c = document.getElementById('counter');
   const i = target / 120;
