--- a/index.html
+++ b/index.html
@@ -5,72 +5,45 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>TichaAfrica — Teach Smart, Lead Change</title>
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap" rel="stylesheet">
+  <link rel="preload" as="image" href="https://upload.wikimedia.org/wikipedia/commons/8/86/Africa_(orthographic_projection).svg">
   <style>
     *{margin:0;padding:0;box-sizing:border-box;}
     body{font-family:'Inter',sans-serif;background:#0f0f23;color:#fff;overflow-x:hidden;}
-    
-    .urgency{
-      position:fixed;top:0;left:0;right:0;
-      background:linear-gradient(90deg,#ff6b35,#ffd700,#4ecdc4);
-      color:#0f0f23;padding:16px 20px;
-      font-weight:bold;font-size:1.3rem;text-align:center;
-      z-index:1002;box-shadow:0 4px 20px rgba(0,0,0,0.4);
-    }
-    
-    header{
-      position:fixed;top:68px;left:0;right:0;
-      background:#fdfdfb;padding:20px 20px 18px;text-align:center;
-      z-index:1001;box-shadow:0 6px 20px rgba(0,0,0,0.15);
-      border-bottom:4px solid #ffd700;
-    }
-    header img{height:78px;transition:0.4s;}
-    header img:hover{transform:scale(1.12) rotate(5deg);}
+    .urgency{position:fixed;top:0;left:0;right:0;background:linear-gradient(90deg,#ff6b35,#ffd700,#4ecdc4);color:#0f0f23;padding:14px 20px;font-weight:bold;font-size:1.2rem;text-align:center;z-index:1002;box-shadow:0 4px 20px rgba(0,0,0,0.4);}
+    header{position:fixed;top:62px;left:0;right:0;background:#fdfdfb;padding:16px 20px;text-align:center;z-index:1001;box-shadow:0 6px 20px rgba(0,0,0,0.15);border-bottom:4px solid #ffd700;}
+    header img{height:76px;transition:.4s;filter:drop-shadow(0 3px 8px rgba(0,0,0,0.3));}
+    header img:hover{transform:scale(1.1) rotate(5deg);}
 
-    .hero{
-      position:relative;min-height:100vh;
-      display:flex;align-items:center;justify-content:center;
-      text-align:center;padding:200px 20px 120px;
-      background:radial-gradient(circle at center, #764ba2 0%, #667eea 70%);
-      overflow:hidden;
-    }
-    .africa-bg{
-      position:absolute;top:50%;left:50%;
-      width:82%;max-width:720px;
-      transform:translate(-50%,-50%);
-      opacity:0.22;z-index:1;pointer-events:none;
-      filter:drop-shadow(0 0 60px #00a86b) invert(18%) sepia(92%) saturate(1400%) hue-rotate(140deg) brightness(0.9) contrast(1.1);
-    }
-    #particles-js{position:absolute;top:0;left:0;width:100%;height:100%;z-index:2;}
+    .hero{position:relative;min-height:100vh;display:flex;align-items:center;justify-content:center;text-align:center;padding:180px 20px 100px;background:radial-gradient(circle at center,#764ba2 0%,#667eea 70%);overflow:hidden;}
+    #particles{position:absolute;inset:0;z-index:1;pointer-events:none;}
+    .africa-bg{position:absolute;top:50%;left:50%;width:80%;max-width:680px;transform:translate(-50%,-50%);opacity:0.2;z-index:1;pointer-events:none;filter:drop-shadow(0 0 50px #00a86b) invert(18%) sepia(92%) saturate(1400%) hue-rotate(140deg) brightness(0.9) contrast(1.1);transition:opacity 1.5s;}
     .hero-content{position:relative;z-index:3;max-width:900px;}
-
-    .hero h1{font-size:clamp(2.8rem,8vw,5rem);margin-bottom:20px;line-height:1.1;text-shadow:0 0 40px rgba(255,215,0,0.8);}
-    .hero p{font-size:1.4rem;max-width:700px;margin:0 auto 30px;opacity:0.95;}
-    .motto{font-size:clamp(2.2rem,7vw,4rem);font-weight:900;background:linear-gradient(45deg,#ffd700,#ff6b35,#4ecdc4);-webkit-background-clip:text;-webkit-text-fill-color:transparent;margin:35px 0;}
-    .btn{display:inline-block;padding:20px 50px;margin:15px;background:linear-gradient(45deg,#ffd700,#ff6b35);color:#0f0f23;font-weight:bold;border-radius:50px;font-size:1.4rem;box-shadow:0 12px 35px rgba(255,107,53,0.5);transition:0.4s;}
-    .btn:hover{transform:translateY(-10px) scale(1.08);}
+    .hero h1{font-size:clamp(2.6rem,8vw,4.8rem);margin-bottom:20px;line-height:1.1;text-shadow:0 0 40px rgba(255,215,0,0.8);}
+    .hero p{font-size:1.35rem;max-width:700px;margin:0 auto 28px;opacity:0.94;line-height:1.7;}
+    .motto{font-size:clamp(2.2rem,7.5vw,4.2rem);font-weight:900;background:linear-gradient(45deg,#ffd700,#ff6b35,#4ecdc4);-webkit-background-clip:text;-webkit-text-fill-color:transparent;margin:32px 0;}
+    .btn{display:inline-block;padding:18px 48px;margin:12px;background:linear-gradient(45deg,#ffd700,#ff6b35);color:#0f0f23;font-weight:bold;border-radius:50px;font-size:1.35rem;box-shadow:0 10px 30px rgba(255,107,53,0.5);transition:transform .4s,box-shadow .4s;}
+    .btn:hover{transform:translateY(-8px);box-shadow:0 20px 50px rgba(255,107,53,0.7);}
     .btn-secondary{background:linear-gradient(45deg,#4ecdc4,#00a86b);color:#fff;}
 
     section{max-width:1100px;margin:100px auto;padding:60px 30px;background:rgba(255,255,255,0.08);backdrop-filter:blur(20px);border-radius:30px;border:1px solid rgba(255,215,0,0.25);}
-    h2{font-size:2.8rem;text-align:center;color:#ffd700;margin-bottom:40px;}
-    .counter{font-size:clamp(4rem,12vw,7rem);font-weight:900;background:linear-gradient(45deg,#4ecdc4,#ffd700);-webkit-background-clip:text;-webkit-text-fill-color:transparent;text-align:center;}
+    h2{font-size:2.7rem;text-align:center;color:#ffd700;margin-bottom:40px;}
+    .counter{font-size:clamp(4.2rem,13vw,8rem);font-weight:900;background:linear-gradient(45deg,#4ecdc4,#ffd700);-webkit-background-clip:text;-webkit-text-fill-color:transparent;text-align:center;}
 
-    /* REAL ICON CHECKMARKS */
     ul{list-style:none;max-width:800px;margin:50px auto;}
-    ul li{
-      font-size:1.35rem;margin:30px 0;padding-left:70px;
-      position:relative;line-height:1.7;
-    }
-    ul li::before{
-      content:"";
-      position:absolute;left:0;top:50%;
-      transform:translateY(-50%);
-      width:44px;height:44px;
-      background:url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="%2300a86b"><path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/></svg>') center/contain no-repeat;
-    }
+    ul li{font-size:1.32rem;margin:32px 0;padding-left:74px;position:relative;line-height:1.7;color:#fff;}
+    .checkmark{position:absolute;left:0;top:50%;transform:translateY(-50%);width:50px;height:50px;}
+    .checkmark svg{width:100%;height:100%;}
+    .checkmark path{fill:none;stroke:#00a86b;stroke-width:7;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:100;stroke-dashoffset:100;}
+    ul li.visible .checkmark path{animation:draw 1s forwards .3s;}
+    @keyframes draw{to{stroke-dashoffset:0;}}
 
     .final-cta{background:linear-gradient(135deg,#ff6b35,#ffd700);color:#0f0f23;padding:90px 30px;border-radius:40px;text-align:center;margin:100px auto;}
-    .whatsapp-float{position:fixed;bottom:30px;right:30px;width:65px;height:65px;background:#25d366;color:#fff;border-radius:50%;display:flex;align-items:center;justify-content:center;font-size:35px;box-shadow:0 8px 25px rgba(37,211,102,0.7);z-index:999;}
+    .whatsapp-float{position:fixed;bottom:24px;right:24px;width:62px;height:62px;background:#25d366;color:#fff;border-radius:50%;display:flex;align-items:center;justify-content:center;font-size:34px;box-shadow:0 8px 25px rgba(37,211,102,0.7);z-index:999;}
+    footer{background:#0f0f23;padding:50px 20px;text-align:center;color:#888;font-size:1rem;border-top:1px solid rgba(255,215,0,0.2);}
+    footer a{color:#4ecdc4;margin:0 10px;text-decoration:none;}
+    footer a:hover{color:#ffd700;}
   </style>
 </head>
 <body>
@@ -78,13 +51,12 @@
 <div class="urgency">The First 10,000 Teachers Will Shape Africa’s AI Future — Join Now!</div>
 
 <header data-aos="fade-down">
-  <img src="images/logo1.png" alt="TichaAfrica">
+  <img src="images/logo1.png" alt="TichaAfrica" loading="eager">
 </header>
 
 <div class="hero" id="hero">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/8/86/Africa_(orthographic_projection).svg" class="africa-bg" alt="Africa">
-  <canvas id="particles-js"></canvas>
-  
+  <canvas id="particles"></canvas>
+  <img src="https://upload.wikimedia.org/wikipedia/commons/8/86/Africa_(orthographic_projection).svg" class="africa-bg" alt="Africa" loading="lazy">
   <div class="hero-content">
     <h1 data-aos="fade-up">African Teachers Are Rising<br>to Lead the AI Revolution</h1>
     <p data-aos="fade-up" data-aos-delay="200">The continent’s first teacher-led, mobile-first AI training movement — built by African teachers, for African teachers.</p>
@@ -96,26 +68,22 @@
   </div>
 </div>
 
-<!-- Your sections (only changed the checkmarks) -->
 <section data-aos="fade-up">
   <h2>Founding Teachers So Far</h2>
-  <div class="counter" id="counter">0</div>
+  <div class="counter">1,247</div>
   <p style="text-align:center;font-size:1.4rem;color:#ffd700;margin-top:20px;">…and growing every minute. Be part of history!</p>
 </section>
 
 <section data-aos="fade-up">
   <h2>The Problem</h2>
   <p style="text-align:center;font-size:1.6rem;max-width:900px;margin:40px auto;line-height:1.8;">
-    Foreign AI is being forced into African classrooms<br>
-    without a single African teacher in the design room.
+    Foreign AI is being forced into African classrooms<br>without a single African teacher in the design room.
   </p>
   <p style="text-align:center;font-size:1.7rem;color:#ff6b35;font-weight:bold;margin:30px auto;">
-    When teachers are told to adopt instead of co-create,<br>
-    we lose their ingenuity, their indigenous wisdom, their magic.
+    When teachers are told to adopt instead of co-create,<br>we lose their ingenuity, their indigenous wisdom, their magic.
   </p>
   <p style="text-align:center;font-size:1.9rem;color:#4ecdc4;margin:40px auto;">
-    A tool that does not carry the soul of the African teacher<br>
-    will never truly serve the African child.
+    A tool that does not carry the soul of the African teacher<br>will never truly serve the African child.
   </p>
   <p style="text-align:center;font-size:2.3rem;color:#ffd700;font-weight:900;margin-top:50px;">
     That era ends today.<br>With us.
@@ -126,11 +94,11 @@
   <h2>The Solution — Led by You</h2>
   <p style="text-align:center;font-size:1.4rem;max-width:700px;margin:0 auto 40px;">Together we are building the first truly African AI curriculum and tools:</p>
   <ul>
-    <li>100% teacher-led from day one</li>
-    <li>Mobile-first — works on any phone, any network</li>
-    <li>Free core training forever</li>
-    <li>Fully aligned with UNESCO AI Competency Framework for Teachers</li>
-    <li>Fully aligned with African Union Continental AI Strategy</li>
+    <li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l5 5 10-10"/></svg></div>100% teacher-led from day one</li>
+    <li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l5 5 10-10"/></svg></div>Mobile-first — works on any phone, any network</li>
+    <li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l5 5 10-10"/></svg></div>Free core training forever</li>
+    <li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l5 5 10-10"/></svg></div>Fully aligned with UNESCO AI Competency Framework for Teachers</li>
+    <li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l5 5 10-10"/></svg></div>Fully aligned with African Union Continental AI Strategy</li>
   </ul>
   <div class="motto" style="margin-top:50px;">Teach Smart, Lead Change</div>
 </section>
@@ -138,12 +106,12 @@
 <section data-aos="fade-up">
   <h2>What Founding Teachers Gain</h2>
   <ul>
-    <li>Shape the curriculum used by millions of African learners</li>
-    <li>Exclusive digital badge & certificate</li>
-    <li>Direct collaboration with teachers across 54 countries</li>
-    <li>Early access to brand-new AI teaching tools</li>
-    <li>Recognition from UNESCO, African Union & global partners</li>
-    <li>Leave a legacy in the history of African education</li>
+    <li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l5 5 10-10"/></svg></div>Shape the curriculum used by millions of African learners</li>
+    <li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l5 5 10-10"/></svg></div>Exclusive digital badge & certificate</li>
+    <li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l5 5 10-10"/></svg></div>Direct collaboration with teachers across 54 countries</li>
+    <li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l5 5 10-10"/></svg></div>Early access to brand-new AI teaching tools</li>
+    <li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l5 5 10-10"/></svg></div>Recognition from UNESCO, African Union & global partners</li>
+    <li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l5 5 10-10"/></svg></div>Leave a legacy in the history of African education</li>
   </ul>
 </section>
 
@@ -155,33 +123,52 @@
 
 <a href="https://wa.me/YOUR_NUMBER?text=Hi%20TichaAfrica!" class="whatsapp-float" target="_blank">WhatsApp</a>
 
+<footer>
+  <p>© 2025 TichaAfrica • <strong style="color:#ffd700;">Teach Smart, Lead Change</strong></p>
+  <p style="margin-top:12px;">
+    <a href="mailto:contact@tichaafrica.com">contact@tichaafrica.com</a> • 
+    <a href="#">WhatsApp</a> • <a href="#">Instagram</a> • <a href="#">X</a> • <a href="#">LinkedIn</a>
+  </p>
+</footer>
+
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
 <script>
-  AOS.init({once:true,duration:1200});
+  AOS.init({once:true,duration:1000,easing:'ease-out'});
 
-  // Deep-green particles
-  particlesJS("particles-js", {
-    particles: {
-      number: { value: 220 },
-      color: { value: ["#006400","#008c4a","#00a86b","#00c67a"] },
-      opacity: { value: 0.9, random: true },
-      size: { value: 5, random: true },
-      move: { enable: true, speed: 0.9 }
-    },
-    interactivity: { events: { onhover: { enable: true, mode: "repulse" }}},
-    retina_detect: true
-  });
+  // ULTRA-LIGHTWEIGHT AFRICA PARTICLES (fast on mobile)
+  const canvas = document.getElementById('particles');
+  const ctx = canvas.getContext('2d');
+  canvas.width = window.innerWidth; canvas.height = window.innerHeight;
+  let particles = [];
+  for(let i=0;i<180;i++){
+    particles.push({
+      x:Math.random()*canvas.width,
+      y:Math.random()*canvas.height,
+      vx:(Math.random()-0.5)*0.8,
+      vy:(Math.random()-0.5)*0.8,
+      size:3+Math.random()*3,
+      color:['#006400','#008c4a','#00a86b','#00c67a'][Math.floor(Math.random()*4)]
+    });
+  }
+  function draw(){ctx.clearRect(0,0,canvas.width,canvas.height);
+    particles.forEach(p=>{ctx.fillStyle=p.color;ctx.beginPath();ctx.arc(p.x,p.y,p.size,0,Math.PI*2);ctx.fill();
+      p.x+=p.vx;p.y+=p.vy;
+      if(p.x<0||p.x>canvas.width)p.vx*=-1;
+      if(p.y<0||p.y>canvas.height)p.vy*=-1;
+    });requestAnimationFrame(draw);}
+  draw();
+  window.addEventListener('resize',()=>{canvas.width=window.innerWidth;canvas.height=window.innerHeight;});
 
-  // Counter
-  let count = 0, target = 1247;
-  const c = document.getElementById('counter');
-  const i = target / 120;
-  const t = setInterval(() => {
-    count += i;
-    if (count >= target) { c.textContent = target.toLocaleString(); clearInterval(t); }
-    else c.textContent = Math.floor(count).toLocaleString();
-  }, 30);
+  // Show Africa SVG only when in view
+  const africaImg = document.querySelector('.africa-bg');
+  const observer = new IntersectionObserver(e=>{if(e[0].isIntersecting)africaImg.style.opacity='0.22';},{threshold:0.1});
+  observer.observe(document.querySelector('.hero'));
+
+  // Animate checkmarks on scroll
+  const liObserver = new IntersectionObserver(e=>{e.forEach(entry=>{if(entry.isIntersecting){
+    entry.target.querySelectorAll('li').forEach((li,i)=>setTimeout(()=>li.classList.add('visible'),i*180));
+  });},{threshold:0.3});
+  document.querySelectorAll('section').forEach(s=>liObserver.observe(s));
 </script>
 </body>
 </html>
